--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,3 +1,8 @@
+<!-- Disable client-side caching for fresh content -->
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
+
 <style>
 #sidebar .site-title,
 #sidebar .site-title a,
