--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,27 +6,26 @@
   <div class="d-flex justify-content-between align-items-center">
       <div class="footer-left">
         <p class="mb-0">
-          © {{ 'now' | date: "%Y" }}
-          <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>.
-          {% if site.data.locales[lang].copyright.brief %}
-          <span data-toggle="tooltip" data-placement="top"
-            title="{{ site.data.locales[lang].copyright.verbose }}">{{ site.data.locales[lang].copyright.brief }}</span>
+          © {{ 'now' | date: '%Y' }}
+          {% if site.author %}
+            <a href="{{ site.url }}">{{ site.author }}</a>.
+          {% else %}
+            {{ site.title }}.
           {% endif %}
+          
+          <span data-toggle="tooltip" data-placement="top"
+            title="Except where otherwise noted, the blog posts on this site are licensed under the Creative Commons Attribution 4.0 International (CC BY 4.0) License by the author.">Some rights reserved.</span>
+          
         </p>
       </div>
 
       <div class="footer-right">
         <p class="mb-0">
-          {% capture _platform %}
-            <a href="https://jekyllrb.com" target="_blank" rel="noopener">Jekyll</a>
-          {% endcapture %}
-
-          {% capture _theme %}
+          Using the 
             <a href="https://github.com/cotes2020/jekyll-theme-chirpy" target="_blank" rel="noopener">Chirpy</a>
-          {% endcapture %}
-
-          {{ site.data.locales[lang].meta | default: 'Powered by :PLATFORM with :THEME theme.'
-            | replace: ':PLATFORM', _platform | replace: ':THEME', _theme }}
+           theme for 
+            <a href="https://jekyllrb.com" target="_blank" rel="noopener">Jekyll</a>
+          .
         </p>
       </div>
   </div>
